# exp_assignment_2

./: README.md
assignment_2/: CMakeLists.txt
assignment_2/launch/: assignment_2.launch.py
assignment_2/pddl/: domain.pddl  problem.pddl
assignment_2/urdf/: robot4.gazebo
experimental/experimental/: package.xml  setup.py
experimental/experimental/experimental/: exp2.py
navigation2/nav2_bringup/maps/: map.pgm  map.yaml
navigation2/nav2_bringup/params/: nav2_params.yaml
ros2_planning_system_examples/plansys2_bt_example/src/: nav2_sim_node.cpp
ros2_planning_system_examples/plansys2_patrol_navigation_example/params/: nav2_params.yaml
ros2_planning_system_examples/plansys2_patrol_navigation_example/src/: move_action_node.cpp  patrol_action_node.cpp  patrolling_controller_node.cpp
slam_toolbox/config/: mapper_params_online_sync.yaml
