<package format="3">
  <name>experimental</name>
  <version>0.1.0</version>
  <description>ROS2 package for Python-based assignment</description>
  <maintainer email="dikshantthakur12@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

